<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fd_sdk_vendor</name>
  <version>0.1.1</version>
  <description>Vendored version of the Force Dimension SDK (version 3.16.1).</description>
  <maintainer email="thibault.poignonec@gmail.com">Thibault Poignonec</maintainer>
  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <author email="thibault.poignonec@gmail.com">Thibault Poignonec</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_test</buildtool_depend>
  <buildtool_depend>ament_cmake_gtest</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>libusb-1.0-dev</depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
